--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
 	<h1>Welcome to My Page</h1>
 	<p>This is a simple site.</p>
+
+	<footer>Made with Git & GitHub</footer>
   </body>
 </html>
