--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Hello, World!</title>
   </head>
   <body>
-	<h1>Welcome to My Page..new addtion</h1>
+	<h1>Welcome to My Page..new addtion this is another commit done by Farhan on same line 7 separately</h1>
   </body>
 </html>
 
