--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <title>Hello, World!</title>
   </head>
   <body>
-	<h1>Welcome to My Page</h1>
-	<p>This is a simple site.</p>
-
-	<footer>Made with Git & GitHub</footer>
+	<h1>Welcome to My Page..new addtion</h1>
   </body>
 </html>
